Resolve débitos técnicos do sonar.